# Dumpy

./: .gitignore  CMakeLists.txt  README.md  breakpoints.txt  config.ini  dataset.txt
combines/: 12-10.txt  12-11.txt  12-2.txt  12-3.txt  12-4.txt  12-5.txt  12-6.txt  12-7.txt  12-8.txt  12-9.txt  16-1.txt  16-10.txt  16-11.txt  16-12.txt  16-13.txt  16-14.txt  16-15.txt  16-2.txt  16-3.txt  16-4.txt  16-5.txt  16-6.txt  16-7.txt  16-8.txt  16-9.txt  18-1.txt  18-10.txt  18-11.txt  18-12.txt  18-13.txt  18-14.txt  18-15.txt  18-16.txt  18-17.txt  18-2.txt  18-3.txt  18-4.txt  18-5.txt  18-6.txt  18-7.txt  (+30 more)
include/: Const.h
include/DataStructures/: DumpyNode.h  GraphConstruction.h  PqItemSeries.h  TimeSeries.h
include/Searchers/: DumpySearcher.h
include/Utils/: FileUtil.h  INIReader.h  MathUtil.h  SaxUtil.h  TimeSeriesUtil.h  ini.h
src/: Const.cpp  PqItemSeries.cpp  main.cpp
src/IndexConstruction/: DumpyFuzzy.cpp  DumpyNode.cpp  GraphConstruction.cpp
src/SearchEngine/: DumpySearcher.cpp
src/Utils/: FileUtil.cpp  INIReader.cpp  MathUtil.cpp  SaxUtil.cpp  TimeSeriesUtil.cpp  ini.c
